--- a/guestRaces/guestRacesTabs/ch22/intro.html
+++ b/guestRaces/guestRacesTabs/ch22/intro.html
@@ -20,40 +20,20 @@
 
         <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Canned Goods<br></h5>
 
-        <center><img src="https://i.ibb.co/PNVn9fj/canned-goods.png" style="margin-bottom: 10px;"></center>
+        <center><img src="https://i.ibb.co/x32JYYx/canned-goods-xl.png" style="margin-bottom: 10px;"></center>
 
-        <b>Prosperity</b> is a new requirement next to Culture and Population.
-        It is provided by the core city buildings, such as Main Hall, Barracks, Residences and Workshops. Prosperity will be required from Chapter 21
-        onwards to construct and upgrade Settlement buildings.<br><br>
+        <b>Canned Goods</b> is a new Discovered Resource (similarly to Orcs, Mana, Seeds, Unurium and Community Work).
+        It is produced inside Workshops - the Toolbox production (24h) is replaced by the production of Canned Goods. 
+        The production time of Canned Goods is 9 hours and they decay, left unused. Similarly to Coins, Supplies and Community Work, the Canned Goods receive cultural bonus.<br><br>
 
-        After unlocking the very first technology of this chapter, the user interface will get updated so that you can see Prosperity right next
-        to your Culture and Population requirements:<br><br>
+        After unlocking the very first technology of this chapter, you will be able to see Canned Goods right below the Community Work in the "Discovered Resources" column:<br><br>
 
         <center><img src="https://i.ibb.co/R07z5Lx/ui-prosperity.png" style="max-width: 40%; border-radius: 8px;"></center><br>
 
-        Click on the drop-down button to select the default displayed requirement and hover over the four-leaf clover to see your current state
-        of all requirements in your city.<br><br>
-
-        <center><img src="https://i.ibb.co/nm9BBTt/ui-hover.png" style="max-width: 45%; border-radius: 8px;"></center><br>
-
-        Note that only buildings upgraded to levels unlocked by Chapter 21 start to provide Prosperity. Make sure you have upgraded some of your core city
-        buildings before you get into building the Vallorian Legend's settlement.<br><br>
+        Note that only Workshops upgraded to levels unlocked by Chapter 22 start to produce Canned Goods. When upgrading from level 47, you can see this production ability
+        in the upgrade window.<br><br>
 
         <center><img src="https://i.ibb.co/FWV68jq/residence-upgrade.png" style="border: 1px solid black; max-width: 45%; border-radius: 8px;"></center>
-
-        </div>
-
-        <div class="card-spoiler-visualOnly border-spoiler mb-3" style="width: 100%; padding-top: 20px; padding-bottom: 20px; padding-left: 2%; padding-right: 2%;">
-
-        <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Community Work<br></h5>
-
-        <center><img src="https://i.ibb.co/R27Kt3k/work-xl.png" style="margin-bottom: 10px;"></center>
-
-        <b>Community Work</b> is a new Discovered Resource (similarly to Orcs, Mana, Seeds and Unurium).
-        It is provided by Residential Buildings, which now offer a switchable production: you can decide, whether your citizens pay taxes or provide
-        Community Work. This resource will be required in many places of the game from Chapter 21 onwards!<br><br>
-
-        <center><img src="https://i.ibb.co/QYRw0gg/residence-community-work.png" style="border: 1px solid black; max-width: 45%; border-radius: 8px;"></center>
 
         </div>
 
@@ -63,8 +43,8 @@
 
         After unlocking this chapter, you receive the following collection of 4 new avatars.<br><br>
 
-        <center><img src="https://i.ibb.co/5T6nNMx/portrait1.png"> <img src="https://i.ibb.co/gDBgJwX/portrait2.png">
-            <img src="https://i.ibb.co/6nxpf2T/portrait3.png"> <img src="https://i.ibb.co/Lpb9gdc/portrait4.png"></center>
+        <center><img src="https://i.ibb.co/qW61pTT/portrait-id-ch22-f1.png"> <img src="https://i.ibb.co/Y0J4sjq/portrait-id-ch22-f2.png">
+            <img src="https://i.ibb.co/bL52nQp/portrait-id-ch22-m1.png"> <img src="https://i.ibb.co/DgGmdBD/portrait-id-ch22-m2.png"></center>
 
         </div>
         
