theater_zodiac_xxiv release

--- a/buildings.html
+++ b/buildings.html
@@ -46,6 +46,7 @@
     <script src="javascript/notificationHandler.js"></script>
     <script src="database//notifications.js"></script>
     <script src="database/eventsSelectors.js"></script>
+    <script src="database/flexibleRewards.js"></script>
 
     <!-- Modified Bootstrap CSS -->
     <title>All Buildings - iDavis Elvenar</title>
