--- a/index.html
+++ b/index.html
@@ -158,6 +158,8 @@
         <div class="col-md-6 col-sm-11 center bg-skin_light_background rounded-bottom75 rounded-top75" style="padding-top: 20px; padding-bottom: 20px; max-height: 550px; overflow-y: scroll;">
             <div
              id="column_with_news" class="col-md">
+                <li><strong>Autumn Zodiac event arrived!</strong> All buildings from this event are now in the database (August 12th 2024)</li>
+                <li><strong>Grand Prizes and Leagues are now fully supported!</strong> Visit the respective event pages to preview the prizes (August 12th 2024)</li>
                 <li><strong>Builders of Harmony event arrived!</strong> All buildings from this event are now in the database (July 3rd 2024)</li>
                 <li><strong>Marine Marvels event arrived!</strong> All buildings from this event are now in the database (June 7th 2024)</li>
                 <li><strong>Whiskers of the Past event arrived!</strong> All buildings from this event are now in the database (May 13th 2024)</li>
