--- a/guestRaces/guestRacesTabs/ch22/intro.html
+++ b/guestRaces/guestRacesTabs/ch22/intro.html
@@ -3,14 +3,17 @@
 <div id="main">
 
     <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">..:: Harbours of the Deep ::..<br></h5>
-    <img id="gr_banner" src="https://i.ibb.co/f4FTJcz/ch21-banner.png" alt="undefined" class="center " style="width: 50%; margin-bottom: 15px;">
+    <img id="gr_banner" src="https://i.ibb.co/zPm6Jts/ch22-banner.png" alt="undefined" class="center " style="width: 50%; margin-bottom: 15px;">
 
     <div style="margin-left: 3%; margin-right: 3%;">
         <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">..:: Intro ::..<br></h5>
         
-        <i><p class="small-paragraph">Captain Bonkers, leader of the Pirate Guild, pays us a visit and brags that he found a yet unknown island of giant proportions, filled with precious treasures. He offers some mysterious pearls he found there, that are said to bring prosperity to whoever possesses them. While our Mentor is a bit skeptical of buying stuff whose origin is unknown, our Trader is very fascinated and convinces everyone to accept the offer.</p>
-
-            <p class="small-paragraph">Just when Captain Bonkers has left, a horde of dragon-riding Orcs attacks the town, including an angry Orc warlady. It turns out that Captain Bonkers stole the pearls from the warlady of the Orc tribe that lives there - and they followed his traces all the way to your town.</p>
+        <i><p class="small-paragraph">The heavy rain falls as the horde of the newly proclaimed King Bruitemail and his advisor Matad prepare to leave your town. Bruitemail tells you that this reminds him of an orcish legend his mum used to tell:</p>
+            <p class="small-paragraph">"When the great leader sacrifices himself, the heavens will start to cry and won't stop until the swamp is everywhere. This marks the return of the Purring Warlord, the divine patron of the Orcs, and the beginning of the glorious Age of Desaster, where Orcs rule the World!"</p>
+            <p class="small-paragraph">While you wonder if the "Purring Warlord" is the orcish title of Vallorion, reports reach your city that the ongoing rain caused floods in lower parts of the country, especially some regions close to the sea.</p>
+            <p class="small-paragraph">Suddenly, there's an earthquake in your town, after which the rain seems to stop. You discover a crack in the ground that quickly fills with water, creating a new lake close to your city. The Orc horde leaves your town.</p>
+            <p class="small-paragraph">Valara arrives shortly thereafter, telling you about a completely destroyed Halflings settlement that was built at the beach, and all inhabitants have gone missing. You fear the worst. While Valara catches her breath, you check out the new lake nearby. To everyone's surprise, a strange submarine that seems to almost fall apart is spotted in the middle of the lake.</p>
+            <p class="small-paragraph">"What the heck? Is this a whale with a giant backpack?"</p>
         </i>
         <br>
 
@@ -28,12 +31,12 @@
 
         After unlocking the very first technology of this chapter, you will be able to see Canned Goods right below the Community Work in the "Discovered Resources" column:<br><br>
 
-        <center><img src="https://i.ibb.co/R07z5Lx/ui-prosperity.png" style="max-width: 40%; border-radius: 8px;"></center><br>
+        <center><img src="https://i.ibb.co/CbN4wHd/canned-goods-ui.png" style="max-height: 200px; border-radius: 8px;"></center><br>
 
         Note that only Workshops upgraded to levels unlocked by Chapter 22 start to produce Canned Goods. When upgrading from level 47, you can see this production ability
         in the upgrade window.<br><br>
 
-        <center><img src="https://i.ibb.co/FWV68jq/residence-upgrade.png" style="border: 1px solid black; max-width: 45%; border-radius: 8px;"></center>
+        <center><img src="https://i.ibb.co/3FvWSr4/workshop-canned-goods.png" style="border: 1px solid black; max-height: 130px; border-radius: 8px;"></center>
 
         </div>
 
