--- a/guestRaces/guestRacesTabs/ch22/wonders.html
+++ b/guestRaces/guestRacesTabs/ch22/wonders.html
@@ -2,7 +2,7 @@
 
 <div id="main">
 
-    <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">..:: The Vallorian Legend ::..<br></h5>
+    <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">..:: Harbours of the Deep ::..<br></h5>
     <img id="event_banner" src="https://i.ibb.co/zPm6Jts/ch22-banner.png" alt="undefined" class="center " style="width: 50%; margin-bottom: 15px;">
     
     <div style="margin-left: 3%; margin-right: 3%; margin-bottom: 25px;">
