--- a/guestRaces/woodelves.html
+++ b/guestRaces/woodelves.html
@@ -183,7 +183,7 @@
 </script>
 
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4154227292627045"
-                            crossorigin="anonymous"></script>  In-article 
+                            crossorigin="anonymous"></script>
                         <ins class="adsbygoogle"
                             style="display:block; text-align:center;"
                             data-ad-layout="in-article"
