ch22 settlement and layouts

--- a/guestRaces/guestRacesTabs/ch22/settlement.html
+++ b/guestRaces/guestRacesTabs/ch22/settlement.html
@@ -9,7 +9,7 @@
 
     <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">..:: Settlement ::..<br></h5>
 
-    <img id="event_banner" src="" alt="undefined" class="center " style="margin-bottom: 20px;">
+    <img id="event_banner" src="https://i.ibb.co/S5gC5n9/settlement-ch22.png" alt="undefined" class="center " style="margin-bottom: 20px;">
         
     As we have described in the <b>Intro</b> tab, Chapter 22 - Harbours of the Deep introduces a new resource to the game:<br><br>
     <ul>
@@ -34,10 +34,10 @@
                     <th style="width: 25%; text-align: center;">Level 4</th>
                 </tr>
                 <tr>
-                  <td style="width: 25%; text-align: center;"><img src="" style="max-width: 100%;"></td>
-                  <td style="width: 25%; text-align: center;"><img src="" style="max-width: 100%;"></td>
-                  <td style="width: 25%; text-align: center;"><img src="" style="max-width: 100%;"></td>
-                  <td style="width: 25%; text-align: center;"><img src="" style="max-width: 100%;"></td>
+                  <td style="width: 25%; text-align: center;"><img src="https://i.ibb.co/3kY7YtG/portal-1.png" style="max-width: 100%;"></td>
+                  <td style="width: 25%; text-align: center;"><img src="https://i.ibb.co/cQv1tnf/portal-2.png" style="max-width: 100%;"></td>
+                  <td style="width: 25%; text-align: center;"><img src="https://i.ibb.co/QPgGtdd/portal-3.png" style="max-width: 100%;"></td>
+                  <td style="width: 25%; text-align: center;"><img src="https://i.ibb.co/0yV8Fh5/portal-4.png" style="max-width: 100%;"></td>
                 </tr>
                 <tr>
                     <td style="width: 25%; text-align: center;">8x8</td>
@@ -175,8 +175,8 @@
                     <th style="width: 50%; text-align: center;">Level 2</th>
                 </tr>
                 <tr>
-                  <td style="width: 50%; text-align: center;"><img src="" style="max-width: 100%;"></td>
-                  <td style="width: 50%; text-align: center;"><img src="" style="max-width: 100%;"></td>
+                  <td style="width: 50%; text-align: center;"><img src="https://i.ibb.co/GP4LNss/production-1-1.png" style="max-width: 100%;"></td>
+                  <td style="width: 50%; text-align: center;"><img src="https://i.ibb.co/vsBfM6L/production-1-2.png" style="max-width: 100%;"></td>
                 </tr>
                 <tr>
                     <td style="width: 50%; text-align: center;">8x5</td>
@@ -252,8 +252,8 @@
                     <th style="width: 50%; text-align: center;">Level 2</th>
                 </tr>
                 <tr>
-                  <td style="width: 50%; text-align: center;"><img src="" style="max-width: 100%;"></td>
-                  <td style="width: 50%; text-align: center;"><img src="" style="max-width: 100%;"></td>
+                  <td style="width: 50%; text-align: center;"><img src="https://i.ibb.co/7pWz6c0/production-2-1.png" style="max-width: 100%;"></td>
+                  <td style="width: 50%; text-align: center;"><img src="https://i.ibb.co/ZMt4hcC/production-2-2.png" style="max-width: 100%;"></td>
                 </tr>
                 <tr>
                     <td style="width: 50%; text-align: center;">7x6</td>
@@ -329,8 +329,8 @@
                     <th style="width: 50%; text-align: center;">Level 2</th>
                 </tr>
                 <tr>
-                  <td style="width: 50%; text-align: center;"><img src="" style="max-width: 100%;"></td>
-                  <td style="width: 50%; text-align: center;"><img src="" style="max-width: 100%;"></td>
+                  <td style="width: 50%; text-align: center;"><img src="https://i.ibb.co/nCPNzCz/production-3-1.png" style="max-width: 100%;"></td>
+                  <td style="width: 50%; text-align: center;"><img src="https://i.ibb.co/5x9p9qQ/production-3-2.png" style="max-width: 100%;"></td>
                 </tr>
                 <tr>
                     <td style="width: 50%; text-align: center;">5x8</td>
@@ -406,8 +406,8 @@
                     <th style="width: 50%; text-align: center;">Level 2</th>
                 </tr>
                 <tr>
-                  <td style="width: 50%; text-align: center;"><img src="" style="max-width: 100%;"></td>
-                  <td style="width: 50%; text-align: center;"><img src="" style="max-width: 100%;"></td>
+                  <td style="width: 50%; text-align: center;"><img src="https://i.ibb.co/xY5KNd3/production-4-1.png" style="max-width: 100%;"></td>
+                  <td style="width: 50%; text-align: center;"><img src="https://i.ibb.co/1vyswVh/production-4-2.png" style="max-width: 100%;"></td>
                 </tr>
                 <tr>
                     <td style="width: 50%; text-align: center;">6x7</td>
