--- a/guestRaces/guestRacesTabs/ch22/wonders.html
+++ b/guestRaces/guestRacesTabs/ch22/wonders.html
@@ -21,7 +21,7 @@
         <table class="table-primary" style="width: 100%; margin-top: 20px; margin-bottom: 20px;">
           <tbody>
             <tr>
-              <td style="width: 20%; text-align: center;" colspan="2"><img src="https://cdn.discordapp.com/attachments/1143845307436777483/1277931029075591299/SPOILER_DH_AncientWonder_1_3x7_0000.png?ex=66d43b84&is=66d2ea04&hm=3a72f1f9051dd2eb701c95e8ff98c8b0c38520be18c3e5c4dbe9708e2233d583&" style="max-width: 26%;"></td>
+              <td style="width: 20%; text-align: center;" colspan="2"><img src="https://i.ibb.co/tJ7fpwL/aw1.png" style="max-width: 26%;"></td>
             </tr>
             <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
@@ -68,7 +68,7 @@
         <table class="table-primary" style="width: 100%; margin-top: 20px; margin-bottom: 20px;">
           <tbody>
             <tr>
-              <td style="width: 20%; text-align: center;" colspan="2"><img src="https://cdn.discordapp.com/attachments/1143845307436777483/1277931029910519921/SPOILER_DH_AncientWonder_2_6x3_0008.png?ex=66d43b84&is=66d2ea04&hm=e4510b19e8bf56fa1192aebb356462d140212603fd20b215246316b342078125&" style="max-width: 26%;"></td>
+              <td style="width: 20%; text-align: center;" colspan="2"><img src="https://i.ibb.co/n6rX160/aw2.png" style="max-width: 26%;"></td>
             </tr>
             <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
@@ -105,7 +105,7 @@
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Avatar<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;"><img src=""></td>
+                <td style="width: 8%; text-align: center; width: 50%;"><img src="https://i.ibb.co/cXDKhLV/portrait-aw-ch22-2.png"></td>
               </tr>
           </tbody>
         </table>
