tile_mistyforest_xxiv release

--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
         <div class="col-md-6 col-sm-11 center bg-skin_light_background rounded-bottom75 rounded-top75" style="padding-top: 20px; padding-bottom: 20px; max-height: 550px; overflow-y: scroll;">
             <div
              id="column_with_news" class="col-md">
+                <li><strong>All Howl's Eve event arrived!</strong> All buildings from this event are now in the database (September 25th 2024)</li>
                 <li><strong>Chapter 22 arrived!</strong> All buildings have been regenerated to contain values for chapter 22 (September 2nd 2024)</li>
                 <li><strong>Autumn Zodiac event arrived!</strong> All buildings from this event are now in the database (August 12th 2024)</li>
                 <li><strong>Grand Prizes and Leagues are now fully supported!</strong> Visit the respective event pages to preview the prizes (August 12th 2024)</li>
