season_secrets release

--- a/admin.html
+++ b/admin.html
@@ -189,7 +189,6 @@ Odmena1<br></h7>
 
 
     seasonPass (prislusny json pre dany season): <input class="form-control-file" type="file" id="seasonPass" name="filename">
-    season ID (season_dreams): <input type="text" id="season_id"><br>
     <button class="btn btn-lg btn-warning btn-block text-uppercase"  onclick="generateSeasonPass()">GENERATE</button>
 
 </div>
@@ -198,8 +197,7 @@ Odmena1<br></h7>
     <p>SeasonChests:</p>
 
 
-    weightedRewards (xml.balancing.rewards.weighted.WeightedRewards): <input class="form-control-file" type="file" id="seasonChests" name="filename">
-    season ID (season_dreams): <input type="text" id="season_chests_id"><br>
+    weightedRewards (prislusny json pre dany season): <input class="form-control-file" type="file" id="seasonChests" name="filename">
     <button class="btn btn-lg btn-warning btn-block text-uppercase"  onclick="generateSeasonChests()">GENERATE</button>
 
 </div>
