--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
         <div class="col-md-6 col-sm-11 center bg-skin_light_background rounded-bottom75 rounded-top75" style="padding-top: 20px; padding-bottom: 20px; max-height: 550px; overflow-y: scroll;">
             <div
              id="column_with_news" class="col-md">
+                <li><strong>Glory of the Phoenix event arrived!</strong> All buildings from this event are now in the database (March 6th 2025)</li>
                 <li><strong>Elvarian Cook Off event arrived!</strong> All buildings from this event are now in the database (February 3rd 2025)</li>
                 <li><strong>Magic of Yore event arrived!</strong> All buildings from this event are now in the database (December 3rd 2024)</li>
                 <li><strong>Winter Magic event arrived!</strong> All buildings from this event are now in the database (October 24th 2024)</li>
