season of triumph release

--- a/admin.html
+++ b/admin.html
@@ -197,7 +197,7 @@ Odmena1<br></h7>
     <p>SeasonChests:</p>
 
 
-    weightedRewards (prislusny json pre dany season): <input class="form-control-file" type="file" id="seasonChests" name="filename">
+    seasonChests (prislusny json pre dany season): <input class="form-control-file" type="file" id="seasonChests" name="filename">
     <button class="btn btn-lg btn-warning btn-block text-uppercase"  onclick="generateSeasonChests()">GENERATE</button>
 
 </div>
