--- a/guestRaces/guestRacesTabs/ch23/intro.html
+++ b/guestRaces/guestRacesTabs/ch23/intro.html
@@ -8,8 +8,17 @@
     <div style="margin-left: 3%; margin-right: 3%;">
         <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">..:: Intro ::..<br></h5>
         
-        <i><p class="small-paragraph">tbd</p>
-            <p class="small-paragraph">tbd</p>
+        <i><p class="small-paragraph">With mounting evidence that Vallorion, a malevolent deity, has been resurrected and is causing natural disasters that threaten the country, your advisor suggests—against all odds—calling upon Enar for assistance. The god of the forest has always supported you and your allies. If anything can stop an evil god, it is likely another god... Thus, the decision is made to seek an audience with Enar.</p>
+
+<p class="small-paragraph">But how does one secure an audience with a deity? You cannot simply... knock on their door, can you?</p>
+
+<p class="small-paragraph">Believing that Luania, shaman of the forest and priestess of Mana, might hold the answer, you seek her counsel. She arrives with her brother, Peregrim, and together you craft a detailed plan involving the help of the Treants.</p>
+
+<p class="small-paragraph">The Treants have a sacred sanctuary deep within the forest where they venerate Enar. The plan is to build a replica of this sanctuary in your city and bless it with the spirits of the peoples of Elvenar.</p>
+
+<p class="small-paragraph">You will plant the legendary Unicorn Tree in your city and nurture its growth. To harness the energies of the Elvenar peoples, you rebuild the portals of the Dwarfs, Fairies, Orcs, and Halflings, gathering their envoys near the tree.</p>
+
+<p class="small-paragraph">All guest races in your city are encouraged to collaborate and prepare for a grand offering to Enar (much like the Orcs did for Vallorion). Thus, the old "Settlements" are expanded with new buildings, Heritage Huts, designed to produce the fruits of this collaboration and advance your mission to summon Enar.</p>
         </i>
         <br>
 
@@ -25,6 +34,8 @@
         which blocks debuffs from unit types they are strong against.<br><br>
 
         You can view this ability in the unit window:<br><br>
+
+        <center><img src="https://i.ibb.co/3Y972MgM/unit-window.png" style="max-height: 400px; border-radius: 8px;"></center>
 
         <center><img src="" style="max-height: 200px; border-radius: 8px;"></center>
 
