--- a/guestRaces/guestRacesTabs/ch23/settlement.html
+++ b/guestRaces/guestRacesTabs/ch23/settlement.html
@@ -11,7 +11,7 @@
 
     <img id="event_banner" src="https://i.ibb.co/d975hJ3/settlement-ch23.png" alt="undefined" class="center " style="margin-bottom: 20px;">
         
-    As we have described in the <b>Intro</b> tab, Chapter 23 - Secrets of the Unicorn introduces a new resource to the game:<br><br>
+    <!--As we have described in the <b>Intro</b> tab, Chapter 23 - Secrets of the Unicorn introduces a new resource to the game:<br><br>
     <ul>
         <li><b>Canned Goods</b> <img src="https://i.ibb.co/BzwXBhX/canned-goods-small.png" style="width: 24px;">, a brand-new Discovered
         Resource produced inside Workshops - the Toolbox production (24h) is replaced by the production of Canned Goods. The production time of
@@ -69,10 +69,10 @@
                                         Except for Mana and Community Work, the Whale Bay also requires Prosperity. Make sure you have upgraded some of the core city buildings
                                         before placing the first Settlement buildings.
                                     </div>
-                                    <!--<div class="modal-footer">
+                                    <div class="modal-footer">
                                         Vallorian Dragon Tower at level 1 can only store your resources. You need to upgrade it to level 2 in order
                                         to start producing Oblations.
-                                    </div>-->
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -471,7 +471,7 @@
               </tbody>
             </table>
           </div></li>
-    </ul>
+    </ul>-->
 
     <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">..:: Tips & Tricks ::..<br><br></h5>
 
