--- a/guestRaces/guestRacesTabs/ch23/wonders.html
+++ b/guestRaces/guestRacesTabs/ch23/wonders.html
@@ -27,17 +27,17 @@
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Size<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;">3x7</td>
+                <td style="width: 8%; text-align: center; width: 50%;">5x3</td>
               </tr>
             <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Effects<br></h6>
                 </td>
                 <td style="width: 8%; text-align: center; width: 50%;">
-                    <img src="https://image.ibb.co/c9JtEq/seeds.png" style="width: 24px;"> Gives Divine Seeds per Tournament Point<br>
+                    <!--<img src="https://image.ibb.co/c9JtEq/seeds.png" style="width: 24px;"> Gives Divine Seeds per Tournament Point<br>
                     <h7>from 0.00048% of required culture at level 1 to 0.0048% of required culture at level 35</h7><br>
                     <img src="https://i.ibb.co/Y8km2P4/work.png" style="width: 24px;"> Reduces decay of Community Work<br>
-                    <h7>from 0.9% of reduction at level 1 to 9% of reduction at level 35</h7>
+                    <h7>from 0.9% of reduction at level 1 to 9% of reduction at level 35</h7>-->
                 </td>
               </tr>
               <tr>
@@ -74,17 +74,17 @@
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Size<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;">6x3</td>
+                <td style="width: 8%; text-align: center; width: 50%;">3x8</td>
               </tr>
             <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Effects<br></h6>
                 </td>
                 <td style="width: 8%; text-align: center; width: 50%;">
-                  <img src="https://i.ibb.co/Gds0422/unit-orc-strategist.png" style="width: 24px;"> Produces Orc Strategists Production every 3 hours<br>
+                  <!--<img src="https://i.ibb.co/Gds0422/unit-orc-strategist.png" style="width: 24px;"> Produces Orc Strategists Production every 3 hours<br>
                   <h7>from 18% at level 1 to 180% at level 35</h7><br>
                   <img src="https://image.ibb.co/c9JtEq/seeds.png" style="width: 24px;"> Gives Divine Seeds per Spire Chest collected<br>
-                  <h7>from 0.06% of required culture at level 1 to 0.6% of required culture at level 35</h7><br>
+                  <h7>from 0.06% of required culture at level 1 to 0.6% of required culture at level 35</h7><br>-->
                   <img src="" style="width: 24px;"> <br>
                   <h7></h7>
                 </td>
