--- a/index.html
+++ b/index.html
@@ -158,6 +158,8 @@
         <div class="col-md-6 col-sm-11 center bg-skin_light_background rounded-bottom75 rounded-top75" style="padding-top: 20px; padding-bottom: 20px; max-height: 550px; overflow-y: scroll;">
             <div
              id="column_with_news" class="col-md">
+                <li><strong>Chapter 23 arrived!</strong> All buildings have been regenerated to contain values for chapter 23 (May 19th 2024)</li>
+                <li><strong>The Chiming Sands event arrived!</strong> All buildings from this event are now in the database (May 16th 2025)</li>
                 <li><strong>Garden of Remembrance event arrived!</strong> All buildings from this event are now in the database (April 7th 2025)</li>
                 <li><strong>Glory of the Phoenix event arrived!</strong> All buildings from this event are now in the database (March 6th 2025)</li>
                 <li><strong>Elvarian Cook Off event arrived!</strong> All buildings from this event are now in the database (February 3rd 2025)</li>
