--- a/guestRaces/secretsofunicorn.html
+++ b/guestRaces/secretsofunicorn.html
@@ -50,7 +50,7 @@
     <script src="database/researchGuestRaces.js"></script>
 
     <!-- Modified Bootstrap CSS -->
-    <title>Harbours of the Deep - iDavis Elvenar</title>
+    <title>Secrets of the Unicorn - iDavis Elvenar</title>
     <link rel="icon" href="../images/general/idavis.png" type="image/x-icon">
 
     <!-- NAVIGATION -->
