--- a/guestRaces/guestRacesTabs/ch23/layouts.html
+++ b/guestRaces/guestRacesTabs/ch23/layouts.html
@@ -10,6 +10,8 @@
     <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">..:: Layouts ::..<br></h5>
 
     <img id="event_banner" src="https://i.ibb.co/z8pjTPh/layouts.png" alt="undefined" class="center " style="margin-bottom: 20px;">
+
+    Coming soon
         
     <!--<ul>
         <li>The minimal required numbers of production buildings (based on the questline) are 4 Fossil Canyons, 3 Fishing Spots, 4 Kelp Farms and 3 Desalination Plants. Below, you can find some of the layouts created by our community.<br><br>
