--- a/guestRaces/guestRacesTabs/ch23/wonders.html
+++ b/guestRaces/guestRacesTabs/ch23/wonders.html
@@ -34,10 +34,10 @@
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Effects<br></h6>
                 </td>
                 <td style="width: 8%; text-align: center; width: 50%;">
-                    <!--<img src="https://image.ibb.co/c9JtEq/seeds.png" style="width: 24px;"> Gives Divine Seeds per Tournament Point<br>
-                    <h7>from 0.00048% of required culture at level 1 to 0.0048% of required culture at level 35</h7><br>
-                    <img src="https://i.ibb.co/Y8km2P4/work.png" style="width: 24px;"> Reduces decay of Community Work<br>
-                    <h7>from 0.9% of reduction at level 1 to 9% of reduction at level 35</h7>-->
+                    <img src="https://i.ibb.co/s5zgfs4/goods-production.png" style="width: 24px;"> Increases production of all three standard goods<br>
+                    <h7>from +24% at level 1 to +240% of at level 35</h7><br>
+                    <img src="https://i.ibb.co/BzwXBhX/canned-goods-small.png" style="width: 24px;"> Reduces decay of Canned Goods<br>
+                    <h7>from 0.9% of reduction at level 1 to 9% of reduction at level 35</h7>
                 </td>
               </tr>
               <tr>
@@ -81,11 +81,10 @@
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Effects<br></h6>
                 </td>
                 <td style="width: 8%; text-align: center; width: 50%;">
-                  <!--<img src="https://i.ibb.co/Gds0422/unit-orc-strategist.png" style="width: 24px;"> Produces Orc Strategists Production every 3 hours<br>
+                  <img src="https://i.ibb.co/80nbSKf/tg-lr-small.png" style="width: 24px;"> Produces Dryads every 3 hours<br>
                   <h7>from 18% at level 1 to 180% at level 35</h7><br>
-                  <img src="https://image.ibb.co/c9JtEq/seeds.png" style="width: 24px;"> Gives Divine Seeds per Spire Chest collected<br>
-                  <h7>from 0.06% of required culture at level 1 to 0.6% of required culture at level 35</h7><br>-->
-                  <img src="" style="width: 24px;"> <br>
+                  <img src="https://i.ibb.co/fYLXgWP/spell-fragment.png" style="width: 24px;"> Increases the number of Spell Fragments gained from disenchanting items<br>
+                  <h7>from +18% at level 1 to +180% at level 35</h7><br>
                   <h7></h7>
                 </td>
               </tr>
