--- a/guestRaces/guestRacesTabs/ch22/wonders.html
+++ b/guestRaces/guestRacesTabs/ch22/wonders.html
@@ -81,7 +81,7 @@
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Effects<br></h6>
                 </td>
                 <td style="width: 8%; text-align: center; width: 50%;">
-                  <img src="https://i.ibb.co/Gds0422/unit-orc-strategist.png" style="width: 24px;"> Produces Orc Strategists Production every 3 hours<br>
+                  <img src="https://i.ibb.co/Gds0422/unit-orc-strategist.png" style="width: 24px;"> Produces Orc Strategists every 3 hours<br>
                   <h7>from 18% at level 1 to 180% at level 35</h7><br>
                   <img src="https://image.ibb.co/c9JtEq/seeds.png" style="width: 24px;"> Gives Divine Seeds per Spire Chest collected<br>
                   <h7>from 0.06% of required culture at level 1 to 0.6% of required culture at level 35</h7><br>
